--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,28 +15,28 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up JDK 17
+    - name: Gradle 래퍼에 실행 권한 설정
+      run: chmod +x ./gradlew
+
+    - name: JDK 17 설정
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
 
-
-    - name: Build with Gradle
+    - name: Gradle로 빌드
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: clean bootJar
 
-    - name: docker image build
+    - name: 도커 이미지 빌드
       run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-test .
 
-
-    - name: docker login
+    - name: 도커 로그인
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-
-    - name: docker Hub push
+    - name: 도커 허브에 푸시
       run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-test
